Updating test T3b to work with quasi-skew symm + full visc tensor

--- a/tests/T3b/Makefile
+++ b/tests/T3b/Makefile
@@ -41,10 +41,10 @@ FFTW3_LIB = -L$(FFTW3_PATH)/lib -lfftw3 -lfftw3f
 
 # GNU
 FC = mpif90
-OPTFC = -O3 -funroll-loops -ftree-vectorize -fcray-pointer -cpp -pipe -march=native -mtune=native 
-#OPTFC = -g3 -fcray-pointer -cpp
+OPTFC = -O3 -funroll-loops -ftree-vectorize -fcray-pointer -cpp
+#OPTFC = -g -Og -fcray-pointer -cpp -ffpe-trap=zero,invalid
 CC = mpicc
-CFLAGS = -O3 -march=native -mtune=native
+CFLAGS = -O3
 
 # Cray
 #FC = ftn
