--- a/tests/T3c/Makefile
+++ b/tests/T3c/Makefile
@@ -41,8 +41,8 @@ FFTW3_LIB = -L$(FFTW3_PATH)/lib -lfftw3 -lfftw3f
 
 # GNU
 FC = mpif90
-OPTFC = -O3 -funroll-loops -ftree-vectorize -fcray-pointer -cpp
-#OPTFC = -g -Og -fcray-pointer -cpp -ffpe-trap=zero,invalid
+#OPTFC = -O3 -funroll-loops -ftree-vectorize -fcray-pointer -cpp
+OPTFC = -g -Og -fcray-pointer -cpp -ffpe-trap=zero,invalid
 CC = mpicc
 CFLAGS = -O3
 
