--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,5 @@ sudo: required
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y gfortran openmpi-bin libopenmpi-dev
+
+install: make clean && make
