--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,8 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y gfortran openmpi-bin libopenmpi-dev
 
-install: make clean && make
+install: true
+
+script:
+  - make clean
+  - make
